# llm-agent-toolkit

./: README.md  pyproject.toml
llm_agent_toolkit/: __init__.py  types.py
llm_agent_toolkit/context/: compaction.py  truncation.py
llm_agent_toolkit/docker/: container_manager.py
llm_agent_toolkit/evaluation/: execution_scorer.py  swebench_scorer.py
llm_agent_toolkit/llm/: litellm_provider.py  provider.py
llm_agent_toolkit/stdlib/: plan_execute_agent.py  react_agent.py  step_judge.py
llm_agent_toolkit/stdlib/actions/: bash.py  str_replace_editor.py  task_done.py
