[tool.poetry]
name = "llm-agent-toolkit"
version = "0.1.0"
description = "Reusable infrastructure for LLM-based coding agents: tool-calling loops, Docker execution, context management"
authors = []
packages = [{include = "llm_agent_toolkit"}]

[tool.poetry.dependencies]
python = "^3.11"
litellm = "^1.0"
swebench = {version = "^3.0", optional = true}

[tool.poetry.extras]
swebench = ["swebench"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
